--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: MGT Blog
-SEOTitle: 麦谷堂的博客 | MGT Blog
+title: MGT'Blog
+SEOTitle: MGT'Blog
 header-img: img/home-bg.jpg
 email: mgtang692@gmail.com
-description: "这里是 @MGT的个人博客，与你一起发现更大的世界。"
+description: "这是MGT的个人博客，与你一起发现更大的世界。"
 keyword: "MGT, 设计"
-url: "https://mgta.us.kg" # your host, for absolute URL
+url: "https://692.github.io/blog" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
